// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllowableActions existing list, existing properties 1`] = `
<div
  className="col-xs-12 col-md-3"
>
  <div
    className="domain-field-section-heading"
  >
    Allow these Actions
  </div>
  <div
    className="list__properties__allowable-actions"
  >
    <div
      className="list__properties__checkbox-row"
    >
      <div
        className="form-group"
      >
        <label>
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          Delete
        </label>
      </div>
    </div>
    <div
      className="list__properties__checkbox-row"
    >
      <div
        className="form-group"
      >
        <label>
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          Upload
        </label>
      </div>
    </div>
    <div
      className="list__properties__checkbox-row"
    >
      <div
        className="form-group"
      >
        <label>
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          Export & Print
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllowableActions new list, default properties 1`] = `
<div
  className="col-xs-12 col-md-3"
>
  <div
    className="domain-field-section-heading"
  >
    Allow these Actions
  </div>
  <div
    className="list__properties__allowable-actions"
  >
    <div
      className="list__properties__checkbox-row"
    >
      <div
        className="form-group"
      >
        <label>
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          Delete
        </label>
      </div>
    </div>
    <div
      className="list__properties__checkbox-row"
    >
      <div
        className="form-group"
      >
        <label>
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          Upload
        </label>
      </div>
    </div>
    <div
      className="list__properties__checkbox-row"
    >
      <div
        className="form-group"
      >
        <label>
          <input
            checked={true}
            onChange={[Function]}
            type="checkbox"
          />
          Export & Print
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`BasicPropertiesFields existing list, existing properties 1`] = `
<div
  className="col-xs-12 col-md-7"
>
  <div
    className="domain-field-section-heading"
  >
    Basic Properties
  </div>
  <div
    className="row margin-top"
  >
    <div
      className="col-xs-3 col-lg-2"
    >
      <span
        className="domain-no-wrap"
      >
        Name
        <div
          className="overlay-trigger"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <span
            className="label-help-target"
          >
            <span
              className="label-help-icon fa fa-question-circle"
            />
          </span>
        </div>
         *
      </span>
    </div>
    <div
      className="col-xs-9 col-lg-8"
    >
      <input
        className="form-control"
        id="name"
        onChange={[MockFunction]}
        placeholder="Enter a name for this list"
        type="text"
        value="NIMHDemographics"
      />
    </div>
  </div>
  <div
    className="row margin-top"
  >
    <div
      className="col-xs-3 col-lg-2"
    >
      <span
        className="domain-no-wrap"
      >
        Description
        
      </span>
    </div>
    <div
      className="col-xs-9 col-lg-8"
    >
      <textarea
        className="form-control"
        id="description"
        onChange={[MockFunction]}
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`BasicPropertiesFields new list, default properties 1`] = `
<div
  className="col-xs-12 col-md-7"
>
  <div
    className="domain-field-section-heading"
  >
    Basic Properties
  </div>
  <div
    className="row margin-top"
  >
    <div
      className="col-xs-3 col-lg-2"
    >
      <span
        className="domain-no-wrap"
      >
        Name
        <div
          className="overlay-trigger"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <span
            className="label-help-target"
          >
            <span
              className="label-help-icon fa fa-question-circle"
            />
          </span>
        </div>
         *
      </span>
    </div>
    <div
      className="col-xs-9 col-lg-8"
    >
      <input
        className="form-control"
        id="name"
        onChange={[MockFunction]}
        placeholder="Enter a name for this list"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="row margin-top"
  >
    <div
      className="col-xs-3 col-lg-2"
    >
      <span
        className="domain-no-wrap"
      >
        Description
        
      </span>
    </div>
    <div
      className="col-xs-9 col-lg-8"
    >
      <textarea
        className="form-control"
        id="description"
        onChange={[MockFunction]}
        value=""
      />
    </div>
  </div>
</div>
`;
